# pydra

./: .autorc  .codespell-ignorewords  .et  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  .travis.yml  .zenodo.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.html  azure-pipelines.yml  benchmark.py  broken_wf.py  changes.html  ci-cd.yml  codecov.yml  combiner.html  components.html  environment.yml  example.py  genindex.html  index.html  input_spec.html  long_description.rst  min-requirements.txt  objects.inv  output_spec.html  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  (+10 more)
.azure-pipelines/: windows.yml
.binder/: postBuild
.circleci/: config.yml
.doctrees/: api.doctree  combiner.doctree  components.doctree  index.doctree  input_spec.doctree  output_spec.doctree  state.doctree  user_guide.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
0.21/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  state.html  user_guide.html
0.22/: .buildinfo  api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  searchindex.js  state.html  user_guide.html
0.23/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  searchindex.js  state.html  user_guide.html
0.23.0-alpha/: .buildinfo  api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  searchindex.js  state.html  user_guide.html
0.24/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  output_spec.html  py-modindex.html  search.html  state.html  user_guide.html
0.25/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  output_spec.html  py-modindex.html  search.html  state.html  user_guide.html
_modules/: index.html
_sources/: changes.rst.txt  components.rst.txt  input_spec.rst.txt  output_spec.rst.txt
_static/: documentation_options.js  pygments.css
api/: design.base.html  design.boutiques.html  design.html  design.python.html  design.shell.html  design.workflow.html  engine.audit.html  engine.core.html  engine.environments.html  engine.graph.html  engine.helpers.html  engine.helpers_file.html  engine.helpers_state.html  engine.html  engine.lazy.html  engine.node.html  engine.run_pickled.html  engine.specs.html  engine.state.html  engine.submitter.html  engine.task.html  engine.workers.html  engine.workflow.base.html  engine.workflow.html  engine.workflow.lazy.html  engine.workflow.node.html  pydra.engine.audit.html  pydra.engine.boutiques.html  pydra.engine.core.html  pydra.engine.environments.html  pydra.engine.graph.html  pydra.engine.helpers.html  pydra.engine.helpers_file.html  pydra.engine.helpers_state.html  pydra.engine.html  pydra.engine.run_pickled.html  pydra.engine.specs.html  pydra.engine.state.html  pydra.engine.submitter.html  pydra.engine.task.html  (+16 more)
binder/: postBuild
ci/: none.sh  osx.sh  singularity.sh  slurm.sh  win37.sh
ci_test-py3.11-windows/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  output_spec.html  py-modindex.html  search.html  state.html  user_guide.html
debugging-hashing/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  state.html  user_guide.html
docker-scripts-for-tests/: Dockerfile  run-docker-slurm-test.sh  run-psij-docker-slurm.sh  start-docker-slurm.sh
docs/: Makefile  api.rst  changes.rst  components.rst  conf.py  index.rst  input_spec.rst  output_spec.rst  requirements.txt  state.rst  tst.py  user_guide.rst
effigies_input-spec-suggestions/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  searchindex.js  state.html  user_guide.html
empty-docs/: conf.py  index.rst
engine/: auxiliary.py  newengine.py  submitter.py  workers.py
examples/: glm.html  glm.ipynb  t1w-preprocess.html  t1w-preprocess.ipynb
explanation/: conditional-lazy.html  design-approach.html  environments.html  hashing-caching.html  splitting-combining.html  typing.html
howto/: create-task-package.html  port-from-nipype.html
master/: .buildinfo  api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  searchindex.js  state.html  user_guide.html
mock-bytes-repr/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  searchindex.js  state.html  user_guide.html
mriqc-hacking/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  state.html  user_guide.html
new/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
new-docs/: make.bat  tst.py
new-syntax/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  searchindex.js  state.html  user_guide.html
notebooks/: examples  tutorial
old-docs/: conf.py  user_guide.rst
pre-commit-ci-update-config/: api.html  changes.html  combiner.html  components.html  genindex.html  index.html  input_spec.html  objects.inv  output_spec.html  py-modindex.html  search.html  state.html  user_guide.html
pydra/: __about__.py  __init__.py  _version.py  conftest.py
reference/: api.html  (+1 more)
(+1298 files in other folders)
