[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pydra"
description = "Pydra dataflow engine"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "attrs >=24.2.0",
    "cloudpickle >=2.0.0",
    "etelemetry >=0.2.2",
    "filelock >=3.0.0",
    "fileformats >=0.15a5",
    "platformdirs >=2",
]
license = { file = "LICENSE" }
authors = [{ name = "Nipype developers", email = "neuroimaging@python.org" }]
maintainers = [
    { name = "Nipype developers", email = "neuroimaging@python.org" },
]
keywords = ["brainweb", "dataflow", "neuroimaging", "pydra"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
psij = ["psij-python"]
dask = ["dask", "distributed"]
dev = ["black", "pre-commit", "pydra[test]"]
doc = [
    "fileformats-extras >= v0.15.0a5",
    "fileformats-medimage >= v0.10.0a2",
    "fileformats-medimage-extras >= v0.10.0a2",
    "furo>=2022.2.14.1",
    "ipython",
    "ipykernel",
    "ipywidgets",
    "nbsphinx",
    "nest_asyncio",
    "nibabel",
    "nilearn",
    "numpy",
    "numpydoc>=0.6.0",
    "packaging",
    "pandas",
    "pandoc",
    "pydra-mrtrix3 >=3.0.4a17",
    "scipy",
    "sphinx ==6.2.1",
    "sphinx-argparse",
    "sphinx-click",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc ~=0.3.0",
    "sphinxcontrib-versioning",
]
test = [
    "pytest >=6.2.5",
    "pytest-cov",
    "pytest-env",
    "pytest-xdist <2.0",
    "pytest-rerunfailures",
    "pytest-timeout",
    "codecov",
    "numpy",
    "pyld",
    "psutil",
    "python-dateutil",
    "tornado",
    "boutiques",
    "pympler",
]
tutorial = [
    "fileformats-extras >= v0.15.0a3",
    "fileformats-medimage >= v0.10.0a2",
    "fileformats-medimage-extras >= v0.10.0a2",
    "jupyter",
    "jupyter_contrib_nbextensions",
    "jupytext",
    "jupyterlab",
    "matplotlib",
    "nbformat",
    "nbval",
    "nest_asyncio",
    "nibabel",
    "nilearn",
    "numpy",
    "pandas",
    "psutil",
    "pydra-mrtrix3 >=3.0.4a17",
    "scipy",
    "sh",
]
# Aliases
tests = ["pydra[test]"]
docs = ["pydra[doc]"]
all = ["pydra[doc,dev]"]

[project.urls]
documentation = "https://nipype.github.io/pydra/"
homepage = "https://nipype.github.io/pydra/"
repository = "https://github.com/nipype/pydra.git"

[tool.hatch.build]
packages = ["pydra"]
exclude = ["tests"]
include = ["./pydra"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pydra/engine/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
target-version = ['py38']
exclude = "pydra/engine/_version.py"

[tool.codespell]
ignore-words-list = "nd,afile,inpt,fpr"
