[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pydra"
description = "Pydra dataflow engine"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "attrs >=24.2.0",
    "cloudpickle >=3.0.0",
    "etelemetry >=0.3.1",
    "filelock >=3.0.0",
    "fileformats >=0.15.0a7",
    "platformdirs >=2",
]
license = { file = "LICENSE" }
authors = [{ name = "Nipype developers", email = "neuroimaging@python.org" }]
maintainers = [
    { name = "Nipype developers", email = "neuroimaging@python.org" },
]
keywords = ["brainweb", "dataflow", "neuroimaging", "pydra"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "pre-commit", "pydra[test]", "matplotlib"]
doc = [
    "fileformats-extras >= v0.15.0a6",
    "fileformats-medimage >= v0.10.0a2",
    "fileformats-medimage-extras >= v0.10.0a2",
    "furo>=2022.2.14.1",
    "ipython",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "nbsphinx",
    "nest_asyncio",
    "nibabel",
    "nilearn",
    "numpy",
    "numpydoc>=0.6.0",
    "openneuro-py",
    "packaging",
    "pandas",
    "pandoc",
    "pydra-tasks-mrtrix3 >=3.1.0a1",
    "scipy",
    "sphinx",
    "sphinx-argparse",
    "sphinx-click",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc ~=0.3.0",
    "sphinxcontrib-versioning",
]
test = [
    "coverage[toml] >=5.2.1",
    "pytest >=8.3.5",
    "pytest-cov >=6.1",
    "pytest-env >=1.1",
    "pytest-xdist >=3.6",
    "pytest-rerunfailures >=15.0",
    "pytest-timeout >=2.3",
    "pympler >=1.1",
    "fileformats-extras >=0.15.0a7",
    "numpy >=1.26",
    "pyld >=2.0",
    "psutil >=5.9.0",
    "python-dateutil >=2.8.2",
    "tornado >=6.1",
]
tutorial = [
    "fileformats-extras >= v0.15.0a6",
    "fileformats-medimage >= v0.10.0a2",
    "fileformats-medimage-extras >= v0.10.0a2",
    "jupyter",
    "jupyter_contrib_nbextensions",
    "jupytext",
    "jupyterlab",
    "matplotlib",
    "nbformat",
    "nbval",
    "nest_asyncio",
    "nibabel",
    "nilearn",
    "numpy",
    "openneuro-py",
    "pandas",
    "psutil",
    "pydra-tasks-mrtrix3 >=3.1.0a1",
    "scipy",
    "sh",
]
# Aliases
tests = ["pydra[test]"]
docs = ["pydra[doc]"]
all = ["pydra[doc,dev]"]

[project.urls]
documentation = "https://nipype.github.io/pydra/"
homepage = "https://nipype.github.io/pydra/"
repository = "https://github.com/nipype/pydra.git"

[project.scripts]
pydracli = "pydra.scripts.cli:cli"

[tool.hatch.build]
packages = ["pydra"]
exclude = ["tests"]
include = ["./pydra"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pydra/utils/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
exclude = "pydra/utils/_version.py"

[tool.codespell]
ignore-words-list = "nd,afile,inpt,fpr"

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["pydra"]
log_cli_level = "INFO"
xfail_strict = true
addopts = [
  "-svv",
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--import-mode=importlib",
  # Config pytest-cov
  "--cov=pydra",
  "--cov-report=xml",
  "--cov-config=pyproject.toml",
]
doctest_optionflags = "ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS"
env = "PYTHONHASHSEED=0"
filterwarnings = ["ignore::DeprecationWarning"]
junit_family = "xunit2"

[tool.coverage.run]
branch = true
