[metadata]
url = https://github.com/nipype/pydra
author = nipype developers
author_email = neuroimaging@python.org
maintainer = nipype developers
maintainer_email = neuroimaging@python.org
description = Pydra dataflow engine
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache License, 2.0
provides =
    pydra
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.7
install_requires =
    attrs
    cloudpickle >= 0.8.0
    filelock >= 3.0.0
    etelemetry >= 0.2.0

test_requires =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
    numpy
    psutil
    python-dateutil
    tornado
    boutiques
packages = find:
include_package_data = True

[options.package_data]
pydra =
    schema/context.jsonld

[options.extras_require]
doc =
    cloudpickle
    filelock
    packaging
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
test =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
    numpy
    pyld
    psutil
    python-dateutil
    tornado
    boutiques
tests =
    %(test)s
dev =
    %(test)s
    black
    pre-commit
dask =
    %(test)s
    dask
    distributed
all =
    %(doc)s
    %(dev)s

[versioneer]
VCS = git
style = pep440
versionfile_source = pydra/_version.py
versionfile_build = pydra/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
doctests = True
exclude =
    **/__init__.py
    **/tests/*
    *build/
    docs/sphinxext/
    docs/tools/
    pydra/_version.py
max-line-length=99
