[metadata]
url = https://github.com/nipype/pydra
author = Nipype developers
author_email = neuroimaging@python.org
maintainer = Nipype developers
maintainer_email = neuroimaging@python.org
description = Pydra dataflow engine
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache License, 2.0
provides =
    pydra
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.7
install_requires =
    attrs >= 19.1.0
    cloudpickle >= 1.2.2
    filelock >= 3.0.0
    etelemetry >= 0.2.2

test_requires =
    pytest >= 4.4.0, < 6.0.0
    pytest-cov
    pytest-env
    pytest-xdist < 2.0
    pytest-rerunfailures
    pytest-timeout
    codecov
    numpy
    psutil
    python-dateutil
    tornado
    boutiques
    pympler
packages = find:
include_package_data = True

[options.package_data]
pydra =
    schema/context.jsonld

[options.extras_require]
doc =
    attrs >= 19.1.0
    cloudpickle
    filelock
    packaging
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
test =
    pytest >= 4.4.0, < 6.0.0
    pytest-cov
    pytest-env
    pytest-xdist < 2.0
    pytest-rerunfailures
    pytest-timeout
    codecov
    numpy
    pyld
    psutil
    python-dateutil
    tornado
    boutiques
    pympler
tests =
    %(test)s
dev =
    %(test)s
    black==21.4b2
    pre-commit
dask =
    %(test)s
    dask
    distributed
all =
    %(doc)s
    %(dev)s

[versioneer]
VCS = git
style = pep440
versionfile_source = pydra/_version.py
versionfile_build = pydra/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
doctests = True
exclude =
    **/__init__.py
    **/tests/*
    *build/
    docs/sphinxext/
    docs/tools/
    docs/conf.py
    pydra/_version.py
    versioneer.py
max-line-length=105
ignore = E203,W503,F541

[codespell]
ignore-words = .codespell-ignorewords
